--- a/app/login/login.template.html
+++ b/app/login/login.template.html
@@ -11,7 +11,7 @@
           <label for="exampleInputPassword1">Password</label>
           <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" ng-model="login.credentials.password">
         </fieldset>
-        <button type="submit" class="btn btn-primary" ng-click="login.login(login.credentials)">Submit</button>
+        <button type="submit" class="btn btn-primary" ng-click="login.login(login.credentials)" ui-sref="home">Submit</button>
       </form>
     </div>
   </div>
